mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: maria-svc
spec:
  type: ClusterIP
  selector:
    app: maria
  ports:
    - name: maria
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: maria
spec:
  selector:
    matchLabels:
      app: maria
  serviceName: maria
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: maria # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: maria
          image: mariadb:10.5
          ports:
            - containerPort: 3306
              name: maria
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
