ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubetv-ing
spec:
  rules:
    - host: kubetv.192.168.64.21.nip.io
      http:
        paths:
          - backend:
              serviceName: api-svc
              servicePort: 3001
            path: /api
          - backend:
              serviceName: nginx-cache-svc
              servicePort: 80
            path: /js
          - backend:
              serviceName: nginx-cache-svc
              servicePort: 80
            path: /css
          - backend:
              serviceName: nginx-cache-svc
              servicePort: 80
            path: /img
          - backend:
              serviceName: bff-svc
              servicePort: 3000
            path: /
